--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "description": "for learning purpose",
   "main": "index.js",
   "scripts": {
-    "start": "node ./server/index.js",
-    "backend": "nodemon index.js",
+    "start": "node server/index.js",
+    "backend": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ryan-Cheong",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
+    "concurrently": "^5.1.0",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.0"
+    "mongoose": "^5.8.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
